added searchbar with ability to search for cities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">WeatherApp</string>
+    <string name="city_search_placeholder">Enter city name (at least 2 chars)</string>
 </resources>
